[gd_scene load_steps=4 format=3 uid="uid://bp2x7jc1o5ynq"]

[ext_resource type="Script" path="res://src/components/hit_box.gd" id="1_smggg"]
[ext_resource type="Script" path="res://src/components/poison_component.gd" id="2_8thl0"]
[ext_resource type="Script" path="res://src/components/knockback_component.gd" id="3_djm72"]

[node name="HitBox" type="Area2D"]
script = ExtResource("1_smggg")

[node name="PoisonComponent" type="Node" parent="."]
script = ExtResource("2_8thl0")

[node name="KnockbackComponent" type="Node" parent="."]
script = ExtResource("3_djm72")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
